[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes"
description = "Mission analysis for HERON"
readme = "README.md"
requires-python = ">=3.8,<3.11"
license = { text = "MIT" }
version = "0.2.0"
dependencies = [
    "numpy",
    "celest==1.0.0",
    "spacetrack==1.0.1",
    "python-decouple >= 3.8",
    "trajectorize @ git+https://github.com/itchono/trajectorize",
    "supernova-cffi @ git+https://github.com/utat-ss/supernova",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
homepage = "https://github.com/utat-ss/hermes"

[tool.setuptools]
packages = ["hermes"]